# dateplot

./: README.md  dateplot.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
dateplot/: __init__.py  util.py
dateplot/dateplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
