[metadata]
name = dateplot
version = 0.0.3
description = "A simple tool to visualize an arbitrary list of dates"
long_description = file: README.md
long_description_content_type = text/markdown
author = "Coën D. Needell"
author_email = "coeneedell@gmail.com"
license = MIT
url = "git@github.com:Watts-Lab/dateplot.git"
platforms = any

[options]
python_requires = >=3.8
packages = find_namespace:
package_dir =
	= .
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts = 
	dateplot = dateplot:cli
