[metadata]
name = dateplot
version = 0.1.3
description = "A simple tool to visualize an arbitrary list of dates"
long_description = file: README.md
long_description_content_type = text/markdown
author = "Coën D. Needell"
author_email = "coeneedell@gmail.com"
license = MIT
url = "git@github.com:Watts-Lab/dateplot.git"
platforms = any

[options]
python_requires = >=3.8
package_dir=
	=.
packages=find:
include_package_data = True
zip_safe = False
install_requires =
	pandas
	matplotlib
	python-dateutil

[options.entry_points]
console_scripts = 
	dateplot = dateplot:cli
